Ajoute route GET
